--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pmulRTC",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "Sergio Freire Lamas",
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
@@ -20,12 +20,34 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
+    "@ionic-native/base64": "^5.0.0",
+    "@ionic-native/camera": "^5.0.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file-transfer": "^5.0.0",
+    "@ionic-native/image-picker": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/toast": "^5.0.0",
     "@ionic/angular": "^4.0.0",
+    "com-badrit-base64": "0.2.0",
+    "cordova-android": "7.1.4",
+    "cordova-plugin-camera": "4.0.3",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "1.7.1",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^2.3.2",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-telerik-imagepicker": "2.2.3",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-toast": "2.7.2",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
+    "ng-socket-io": "^0.2.4",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.3.3",
+    "socket.io": "^2.2.0",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
@@ -38,9 +60,10 @@
     "@angular/compiler-cli": "~7.2.2",
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.2.0",
-    "@types/node": "~10.12.0",
+    "@ionic/lab": "1.0.19",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~10.12.0",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -54,5 +77,25 @@
     "tslint": "~5.12.0",
     "typescript": "~3.1.6"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-x-toast": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-telerik-imagepicker": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {},
+      "com-badrit-base64": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
