--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/base64": "^5.0.0",
     "@ionic-native/camera": "^5.0.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file": "^5.0.0",
     "@ionic-native/file-transfer": "^5.0.0",
     "@ionic-native/image-picker": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
