--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "@ionic-native/file": "^5.0.0",
     "@ionic-native/file-transfer": "^5.0.0",
     "@ionic-native/image-picker": "^5.0.0",
+    "@ionic-native/native-audio": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/toast": "^5.0.0",
     "@ionic/angular": "^4.0.0",
+    "@ionic/storage": "^2.2.0",
+    "android-camera-permission": "^1.0.0",
     "com-badrit-base64": "0.2.0",
     "cordova-android": "7.1.4",
     "cordova-plugin-camera": "4.0.3",
@@ -43,6 +46,7 @@
     "cordova-plugin-telerik-imagepicker": "2.2.3",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-toast": "2.7.2",
+    "cordova-sqlite-storage": "3.0.0",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "ng-socket-io": "^0.2.4",
@@ -93,7 +97,17 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "com-badrit-base64": {}
+      "com-badrit-base64": {},
+      "cordova-plugin-nativeaudio": {},
+      "android-camera-permission": {},
+      "cordova-plugin-crosswalk-webview": {
+        "XWALK_VERSION": "23+",
+        "XWALK_LITEVERSION": "xwalk_core_library_canary:17+",
+        "XWALK_COMMANDLINE": "--disable-pull-to-refresh-effect",
+        "XWALK_MODE": "embedded",
+        "XWALK_MULTIPLEAPK": "true"
+      },
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
