--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@ionic-native/base64": "^5.0.0",
     "@ionic-native/camera": "^5.0.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file": "^5.0.0",
     "@ionic-native/file-transfer": "^5.0.0",
     "@ionic-native/image-picker": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/toast": "^5.0.0",
     "@ionic/angular": "^4.0.0",
+    "@ionic/storage": "^2.2.0",
     "com-badrit-base64": "0.2.0",
     "cordova-android": "7.1.4",
     "cordova-plugin-camera": "4.0.3",
@@ -92,7 +94,8 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "com-badrit-base64": {}
+      "com-badrit-base64": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
