--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@ionic-native/base64": "^5.0.0",
     "@ionic-native/camera": "^5.0.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file": "^5.0.0",
     "@ionic-native/file-transfer": "^5.0.0",
     "@ionic-native/image-picker": "^5.0.0",
+    "@ionic-native/native-audio": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/toast": "^5.0.0",
     "@ionic/angular": "^4.0.0",
+    "@ionic/storage": "^2.2.0",
     "com-badrit-base64": "0.2.0",
     "cordova-android": "7.1.4",
     "cordova-plugin-camera": "4.0.3",
@@ -42,6 +45,7 @@
     "cordova-plugin-telerik-imagepicker": "2.2.3",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-toast": "2.7.2",
+    "cordova-sqlite-storage": "3.0.0",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "ng-socket-io": "^0.2.4",
@@ -92,7 +96,10 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "com-badrit-base64": {}
+      "com-badrit-base64": {},
+      "cordova-plugin-nativeaudio": {},
+      "android-camera-permission": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
