--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@ionic-native/base64": "^5.0.0",
     "@ionic-native/camera": "^5.0.0",
     "@ionic-native/core": "^5.0.0",
-    "@ionic-native/file": "^5.0.0",
     "@ionic-native/file-transfer": "^5.0.0",
     "@ionic-native/image-picker": "^5.0.0",
     "@ionic-native/native-audio": "^5.0.0",
@@ -31,20 +30,21 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/toast": "^5.0.0",
     "@ionic/angular": "^4.0.0",
-    "@ionic/storage": "^2.2.0",
-    "com-badrit-base64": "0.2.0",
+    "android-camera-permission": "^1.0.0",
+    "com-badrit-base64": "^0.2.0",
     "cordova-android": "7.1.4",
-    "cordova-plugin-camera": "4.0.3",
+    "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
-    "cordova-plugin-file-transfer": "1.7.1",
+    "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.3.2",
+    "cordova-plugin-ionic-webview": "^2.3.3",
+    "cordova-plugin-nativeaudio": "^3.0.9",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-telerik-imagepicker": "2.2.3",
+    "cordova-plugin-telerik-imagepicker": "^2.2.3",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-plugin-x-toast": "2.7.2",
+    "cordova-plugin-x-toast": "^2.7.2",
     "cordova-sqlite-storage": "3.0.0",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
@@ -98,8 +98,7 @@
       "cordova-plugin-ionic-keyboard": {},
       "com-badrit-base64": {},
       "cordova-plugin-nativeaudio": {},
-      "android-camera-permission": {},
-      "cordova-sqlite-storage": {}
+      "android-camera-permission": {}
     },
     "platforms": [
       "android"
