--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@andyet/simplewebrtc": "^1.7.4",
     "@angular/common": "^7.2.2",
     "@angular/core": "^7.2.2",
     "@angular/forms": "^7.2.2",
@@ -28,8 +29,10 @@
     "@ionic-native/native-audio": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/streaming-media": "^5.0.0",
     "@ionic-native/toast": "^5.0.0",
     "@ionic/angular": "^4.0.0",
+    "@ionic/storage": "^2.2.0",
     "android-camera-permission": "^1.0.0",
     "com-badrit-base64": "^0.2.0",
     "cordova-android": "7.1.4",
@@ -42,6 +45,7 @@
     "cordova-plugin-nativeaudio": "^3.0.9",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-streaming-media": "2.2.0",
     "cordova-plugin-telerik-imagepicker": "^2.2.3",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-toast": "^2.7.2",
@@ -49,8 +53,10 @@
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "ng-socket-io": "^0.2.4",
+    "peerjs": "^0.3.20",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.3.3",
+    "simple-peer": "^9.2.1",
     "socket.io": "^2.2.0",
     "zone.js": "~0.8.29"
   },
@@ -98,7 +104,9 @@
       "cordova-plugin-ionic-keyboard": {},
       "com-badrit-base64": {},
       "cordova-plugin-nativeaudio": {},
-      "android-camera-permission": {}
+      "android-camera-permission": {},
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-streaming-media": {}
     },
     "platforms": [
       "android"
