--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
     "@ionic-native/base64": "^5.0.0",
     "@ionic-native/camera": "^5.0.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file": "^5.0.0",
+    "@ionic-native/file-chooser": "^5.0.0",
+    "@ionic-native/file-opener": "^5.0.0",
+    "@ionic-native/file-path": "^5.0.0",
     "@ionic-native/file-transfer": "^5.0.0",
     "@ionic-native/image-picker": "^5.0.0",
+    "@ionic-native/media-capture": "^5.0.0",
     "@ionic-native/native-audio": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -35,13 +40,18 @@
     "@ionic/storage": "^2.2.0",
     "android-camera-permission": "^1.0.0",
     "com-badrit-base64": "^0.2.0",
-    "cordova-android": "7.1.4",
+    "cordova-android": "^7.1.1",
     "cordova-plugin-camera": "^4.0.3",
+    "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-opener2": "2.1.4",
     "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-filechooser": "1.2.0",
+    "cordova-plugin-filepath": "1.5.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.3",
+    "cordova-plugin-media-capture": "3.0.2",
     "cordova-plugin-nativeaudio": "^3.0.9",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
@@ -106,7 +116,14 @@
       "cordova-plugin-nativeaudio": {},
       "android-camera-permission": {},
       "cordova-sqlite-storage": {},
-      "cordova-plugin-streaming-media": {}
+      "cordova-plugin-streaming-media": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-opener2": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "cordova-plugin-filepath": {},
+      "cordova-plugin-filechooser": {},
+      "cordova-plugin-media-capture": {}
     },
     "platforms": [
       "android"
