--- a/package.json
+++ b/package.json
@@ -40,26 +40,26 @@
     "@ionic/storage": "^2.2.0",
     "android-camera-permission": "^1.0.0",
     "com-badrit-base64": "^0.2.0",
-    "cordova-android": "^7.1.1",
+    "cordova-android": "7.1.1",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
-    "cordova-plugin-file-opener2": "2.1.4",
+    "cordova-plugin-file-opener2": "^2.1.4",
     "cordova-plugin-file-transfer": "^1.7.1",
-    "cordova-plugin-filechooser": "1.2.0",
-    "cordova-plugin-filepath": "1.5.1",
+    "cordova-plugin-filechooser": "^1.2.0",
+    "cordova-plugin-filepath": "^1.5.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.3",
-    "cordova-plugin-media-capture": "3.0.2",
+    "cordova-plugin-media-capture": "^3.0.2",
     "cordova-plugin-nativeaudio": "^3.0.9",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-streaming-media": "2.2.0",
+    "cordova-plugin-streaming-media": "^2.2.0",
     "cordova-plugin-telerik-imagepicker": "^2.2.3",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-toast": "^2.7.2",
-    "cordova-sqlite-storage": "3.0.0",
+    "cordova-sqlite-storage": "^3.0.0",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "ng-socket-io": "^0.2.4",
@@ -75,7 +75,7 @@
     "@angular-devkit/build-angular": "~0.12.3",
     "@angular-devkit/core": "~7.2.3",
     "@angular-devkit/schematics": "~7.2.3",
-    "@angular/cli": "~7.2.3",
+    "@angular/cli": "7.2.4",
     "@angular/compiler": "~7.2.2",
     "@angular/compiler-cli": "~7.2.2",
     "@angular/language-service": "~7.2.2",
