--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "android-camera-permission": "^1.0.0",
     "com-badrit-base64": "^0.2.0",
     "cordova-android": "7.1.1",
-    "cordova-clipboard": "1.2.1",
-    "cordova-plugin-android-permissions": "1.0.0",
+    "cordova-clipboard": "^1.2.1",
+    "cordova-plugin-android-permissions": "^1.0.0",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^2.0.2",
@@ -113,7 +113,9 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
       "cordova-plugin-ionic-keyboard": {},
       "com-badrit-base64": {},
       "cordova-plugin-nativeaudio": {},
